--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.11",
+    "chroma-js": "^2.4.2",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-color": "^2.19.3",
+    "react-dom": "18.2.0",
+    "use-debounce": "^8.0.1"
   },
   "devDependencies": {
+    "@types/chroma-js": "^2.1.3",
+    "@types/lodash": "^4.14.182",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
