--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-color": "^2.19.3",
+    "react-countdown": "^2.3.2",
     "react-dom": "18.2.0",
     "use-debounce": "^8.0.1"
   },
