--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@googlemaps/typescript-guards": "^2.0.1",
     "cheerio": "^1.0.0-rc.11",
     "chroma-js": "^2.4.2",
+    "fast-equals": "^4.0.1",
     "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.2.0",
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.3",
+    "@types/google.maps": "^3.49.2",
     "@types/lodash": "^4.14.182",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
